@@ -497,7 +497,7 @@ if (empty($SERVER_URL)) {
 	$SERVER_URL = stripslashes($SERVER_URL);
 }
 if (substr($SERVER_URL,-1)!="/") $SERVER_URL .= "/";	// make SURE that trailing "/" is present
-if (!isset($ALLOW_REMEMBER_ME)) $ALLOW_REMEMBER_ME = true;
+if (!isset($ALLOW_REMEMBER_ME)) $ALLOW_REMEMBER_ME = false;
 if (!isset($PGV_SIMPLE_MAIL)) $PGV_SIMPLE_MAIL = false;
 if (!isset($DBPERSIST)) $DBPERSIST = false;
 
