@@ -10,6 +10,7 @@
 
 
 Version 4.1.5
+ - Fixed: [ 1951335 ] Privacy Warning on View GEDCOM for Media Even for Admin (fisharebest)
  - Fixed: [ 1950986 ] Remote Link - Person to Person, SVN 2899 (fisharebest)
  - Fixed: [ 1947687 ] [4.1.4] Edit link in Quick Update does not work (fisharebest)
  - Fixed: [ 1946362 ] SVN 2867 - Quick Update Links to wrong GEDCOM (fisharebest)
